# review-report

./: .gitignore
src/: CMakeLists.txt  main.cpp  review_report.cpp  review_report.hpp
src/DAL/: DBHelper.cpp  DBHelper.hpp  DBPath.hpp  DBRanking.cpp  DBRanking.hpp  DBSearch.cpp  DBSearch.hpp
src/DAL/unqlite/: unqlite.h
src/generate_report/: CsvReportGenerator.cpp  CsvReportGenerator.hpp  DAL.cpp  DAL.hpp  MapTable.cpp  MapTable.hpp  ReportGenerator.hpp  Table.hpp  csv_table.cpp  csv_table.hpp  insert_data.cpp  insert_data.hpp
src/generate_report/csv_report/: CsvReportGenerator.cpp  CsvReportGenerator.hpp  csv_table.cpp  csv_table.hpp
src/generate_report/table/: MapTable.cpp  Table.hpp  report_data.hpp
src/grade/: SearchResultGrader.hpp
src/grade/cache-grading/: LinksCacheGrader.cpp  LinksCacheGrader.hpp
src/grade/cache-grading/links-cache/: LinksCache.hpp  LinksTextCache.cpp  LinksTextCache.hpp  split.cpp  split.hpp
src/grade/cache-grading/webpage-grading/: AskReviewType.cpp  AskReviewType.hpp  ReviewType.hpp  WebPageGrader.cpp  WebPageGrader.hpp
src/grade/cache-grading/webpage-grading/open-url/: LinuxURLOpener.cpp  LinuxURLOpener.hpp  URLOpener.hpp  WindowsURLOpener.hpp
src/search/: LanguageSearcher.hpp  Searcher.hpp  extract_links.cpp  extract_links.hpp  get_html.cpp  get_html.hpp  google_search.cpp  google_search.hpp
src/searching_data_parser/: CsvParser.cpp  CsvParser.hpp  SearchingDataParser.hpp  file_reading.cpp  file_reading.hpp
